--- a/report.Rmd
+++ b/report.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Gas Milage Analysis of Motor Trend Data"
+title: "Gas Mileage Analysis of Motor Trend Data"
 author: "David Maust"
 date: "06/21/2014"
 output: pdf_document
@@ -7,26 +7,43 @@ output: pdf_document
 
 # Executive Summary
 
-When selecting a car, fuel efficiency is a common selection criteria. In this paper, we look at 1974 Motor Trend data [1] for the purpose of evaluating factors on fuel efficiency.
+When selecting a car, fuel efficiency is a common selection criteria. In this paper, we look at 1974 Motor Trend data [1] for the purpose of evaluating factors on fuel efficiency. We specifically are interested in the effects of automatic vs manual transmission on the gas mileage.
 
 # Preprocessing the Data
+
+We begin by loading the data, and casting the transmission type and number of cylinders to factors.
 
 ```{r}
 data(mtcars)
 mtcars$am <- factor(mtcars$am, levels=c(0,1), labels=c('Automatic', 'Manual'))
+mtcars$cyl <- as.factor(mtcars$cyl)
 ```
 
 # Model Selection
+
+We can use the step function found in the stats package of R to perform model selection.
 ```{r results='hide'}
-model <- lm(mpg ~ am + cyl + disp + hp + carb + gear + vs + qsec + drat, mtcars)
-final_model <- step(model)
+model <- lm(mpg ~ am + wt + cyl + disp + hp + carb + gear + vs + drat, mtcars)
+final_model <- step(model, direction='backward')
 ```
 
-## Final Model
+The final model returned only depends on the transmission type, number of carburetors, and displacement. Other variables did not contribute significantly to the gas mileage usage of the vehicle.
+
 ```{r}
 summary(final_model)
 ```
-In this, the final model has the transmission type, number of carburetors, and displacement. In it we can see that when we hold displacement, and the number of carburetors constant, a manual transmission will achieve `r coef(final_model)[2]` better mpg.
+In this, the final model has the transmission type, number of carburetors, and displacement. In it we can see that when we hold displacement, and the number of carburetors constant, a manual transmission will achieve `r coef(final_model)['amManual']` better mpg.
+
+Looking at a residual plot, we see no patterns.
+```{r}
+plot(resid(final_model) ~ predict(final_model))
+```
+
+Looking at a QQ plot of residual we can see the residuals are approximately normal.
+```{r}
+qqnorm(resid(final_model))
+qqline(resid(final_model))
+```
 
 # References
 
@@ -34,15 +51,21 @@ In this, the final model has the transmission type, number of carburetors, and d
 
 # Appendix
 
-## Figure 1: mpg comparision with respect to displacement.
+## Figure 1: mpg comparision with respect to weight.
 ```{r}
-plot(mpg ~ disp, mtcars, col=am, xlab = 'Displacement')
+plot(mpg ~ wt, mtcars, col=am, xlab = 'Displacement')
 legend('topright', lty=c(1,1), col=1:2, legend = c('Automatic', 'Manual'))
 ```
 
-## Figure 2: mpg comparision with respect to number of carburetors.
+## Figure 2: mpg comparision with respect to number of cylinders.
 ```{r}
-plot(mpg ~ carb, mtcars, col=am)
+plot(mpg ~ cyl, mtcars, col=am)
+legend('topright', lty=c(1,1), col=1:2, legend = c('Automatic', 'Manual'))
+```
+
+## Figure 3: mpg comparision with respect to horsepower.
+```{r}
+plot(mpg ~ hp, mtcars, col=am)
 legend('topright', lty=c(1,1), col=1:2, legend = c('Automatic', 'Manual'))
 ```
 
