--- a/report.Rmd
+++ b/report.Rmd
@@ -7,7 +7,7 @@ output: pdf_document
 
 # Executive Summary
 
-When selecting a car, fuel efficiency is a common selection criteria. In this paper, we look at 1974 Motor Trend data [1] for the purpose of evaluating factors on fuel efficiency. We specifically are interested in the effects of automatic vs manual transmission on the gas mileage.
+When selecting a car, fuel efficiency is a common selection criteria. In this paper, we look at 1974 Motor Trend data [1] for the purpose of evaluating factors on fuel efficiency. We specifically are interested in the effects of automatic vs manual transmission on the gas mileage. By looking at several possible models, we see a relationship does exist between fuel efficiency and transmission type, but that could also be explained by other factors such as vehicle weight.
 
 # Preprocessing the Data
 
@@ -16,33 +16,43 @@ We begin by loading the data, and casting the transmission type and number of cy
 ```{r}
 data(mtcars)
 mtcars$am <- factor(mtcars$am, levels=c(0,1), labels=c('Automatic', 'Manual'))
-mtcars$cyl <- as.factor(mtcars$cyl)
+mtcars$cyl <- factor(mtcars$cyl)
 ```
 
 # Model Selection
 
-We can use the step function found in the stats package of R to perform model selection.
+First we can check that a relationship does exist with a simple linear model.
+
+```{r}
+model1 <- lm(mpg ~ am, mtcars)
+summary(model1)$coefficients
+```
+We can then see that a relationship does exist with a p-value < 0.01 when we do not consider other factors. Vehicles in our sample with a manual transmission got on average `r summary(model1)$coefficients[2]` more miles per gallon. We must see if other confounders could also explain the relationship.
+
+We can then look at additional variables: weight, and number of cylinders.
 ```{r results='hide'}
-model <- lm(mpg ~ am + wt + cyl + disp + hp + carb + gear + vs + drat, mtcars)
-final_model <- step(model, direction='backward')
+model2 <- update(model1, mpg ~ am + wt)
+model3 <- update(model1, mpg ~ am + wt + cyl)
+anova(model1, model2, model3)
 ```
 
-The final model returned only depends on the transmission type, number of carburetors, and displacement. Other variables did not contribute significantly to the gas mileage usage of the vehicle.
+We can see that these are also very influential, and should be included in the model.
 
 ```{r}
-summary(final_model)
-```
-In this, the final model has the transmission type, number of carburetors, and displacement. In it we can see that when we hold displacement, and the number of carburetors constant, a manual transmission will achieve `r coef(final_model)['amManual']` better mpg.
-
-Looking at a residual plot, we see no patterns.
-```{r}
-plot(resid(final_model) ~ predict(final_model))
+summary(model2)$coefficients
 ```
 
-Looking at a QQ plot of residual we can see the residuals are approximately normal.
+In this model with the vehicle weight added we see a high p-value for the manual transmission term. This would indicate that multicollinearity exists. Vehicle weight is correlated to both the transmission type and fuel efficiency. 
+
+# Residual Analysis
+
+Looking at a residual plot, and the Q-Q plot of the residuals vs a normal we can see the studentized residuals are approximately normal.
 ```{r}
-qqnorm(resid(final_model))
-qqline(resid(final_model))
+par(mfcol = c(1,2))
+plot(resid(model3) ~ predict(model3))
+
+qqnorm(rstudent(model3))
+qqline(rstudent(model3))
 ```
 
 # References
@@ -53,14 +63,13 @@ qqline(resid(final_model))
 
 ## Figure 1: mpg comparision with respect to weight.
 ```{r}
-plot(mpg ~ wt, mtcars, col=am, xlab = 'Displacement')
+plot(mpg ~ wt, mtcars, col=am, xlab = 'Vehicle Weight')
 legend('topright', lty=c(1,1), col=1:2, legend = c('Automatic', 'Manual'))
 ```
 
 ## Figure 2: mpg comparision with respect to number of cylinders.
 ```{r}
 plot(mpg ~ cyl, mtcars, col=am)
-legend('topright', lty=c(1,1), col=1:2, legend = c('Automatic', 'Manual'))
 ```
 
 ## Figure 3: mpg comparision with respect to horsepower.
