--- a/report.Rmd
+++ b/report.Rmd
@@ -30,7 +30,7 @@ summary(model1)$coefficients
 We can then see that a relationship does exist with a p-value < 0.01 when we do not consider other factors. Vehicles in our sample with a manual transmission got on average `r summary(model1)$coefficients[2]` more miles per gallon. We must see if other confounders could also explain the relationship.
 
 We can then look at additional variables: weight, and number of cylinders.
-```{r results='hide'}
+```{r}
 model2 <- update(model1, mpg ~ am + wt)
 model3 <- update(model1, mpg ~ am + wt + cyl)
 anova(model1, model2, model3)
@@ -76,6 +76,7 @@ plot(mpg ~ cyl, mtcars, col=am)
 ## Figure 3: mpg comparision with respect to horsepower.
 ```{r}
 plot(mpg ~ hp, mtcars, col=am)
+abline(lm(mpg ~ hp, mtcars))
 legend('topright', lty=c(1,1), col=1:2, legend = c('Automatic', 'Manual'))
 ```
 
