--- a/report.Rmd
+++ b/report.Rmd
@@ -2,7 +2,7 @@
 title: "Gas Mileage Analysis of Motor Trend Data"
 author: "David Maust"
 date: "06/21/2014"
-output: pdf_document
+output: html_document
 ---
 
 # Executive Summary
@@ -27,7 +27,7 @@ First we can check that a relationship does exist with a simple linear model.
 model1 <- lm(mpg ~ am, mtcars)
 summary(model1)$coefficients
 ```
-We can then see that a relationship does exist with a p-value < 0.01 when we do not consider other factors. Vehicles in our sample with a manual transmission got on average `r summary(model1)$coefficients[2]` more miles per gallon. We must see if other confounders could also explain the relationship.
+We can then see that a significant relationship does exist with a p-value < 0.001 when we do not consider other factors. Vehicles in our sample with a manual transmission got on average `r summary(model1)$coefficients[2]` more miles per gallon. We must see if other confounders could also explain the relationship.
 
 We can then look at additional variables: weight, and number of cylinders.
 ```{r}
